--- a/main.tex
+++ b/main.tex
@@ -26,7 +26,10 @@
 \newcommand\pcref[1]{(\cref{#1})}
 
 \usepackage[Bjornstrup]{fncychap}
+
 \usepackage{tikz}
+\usetikzlibrary{shapes, arrows.meta, positioning, shapes.geometric}
+
 \usepackage{titling}
 \usepackage[most]{tcolorbox}
 \usepackage{xhfill}
