Project roles table.

--- a/project.tex
+++ b/project.tex
@@ -282,6 +282,26 @@ our approach are described in the following sections.
 
 \textcolor{red}{Combine SCRUM roles with the roles defined by \textcite{Zumel2019}.}
 
+\begin{tablebox}[label=tab:roles]{Roles of our approach.}
+  \centering
+  \rowcolors{2}{black!10!white}{}
+  \begin{tabular}{lll}
+    \toprule
+    \textbf{Our approach} & \textbf{SCRUM} & \textbf{ZM} \\
+    \midrule
+    Sponsor & Product owner & Project sponsor \\
+    Client & Stakeholder & Client \\
+    Data scientist & Scrum master & Data scientist \\
+    Dev Team & & Data architect/operations \\
+    \bottomrule
+  \end{tabular}
+  \tcblower
+  The roles of SCRUM are associated with the roles defined by \textcite{Zumel2019}.
+  In our approach, the data scientist leads the development team and interacts with the sponsor
+  and the client.  The development team includes people with both database and software
+  engineering expertise.
+\end{tablebox}
+
 \subsection{The principles of our approach}
 
 \begin{enumerate}
