--- a/data.tex
+++ b/data.tex
@@ -927,6 +927,7 @@ shown in \cref{tab:tidy5}.
 \end{tablebox}
 
 \subsection{Bridging normalization, tidyness, and our definition}
+\label{sub:bridge}
 
 First and foremost, both concepts, normalization and tidy data, are not in conflict.
 
