--- a/data.tex
+++ b/data.tex
@@ -170,7 +170,7 @@ reliable and ethical knowledge from huge amounts of data.
   \end{itemize}
 \end{slidebox}
 
-\section{Definition components}
+\section{Fundamental data theory}
 
 As expected, data science is not a isolated science.  It incorporates several concepts
 from other fields and sciences.  In this section, I explain the basis of each component of
@@ -926,7 +926,7 @@ shown in \cref{tab:tidy5}.
   \end{tabular}
 \end{tablebox}
 
-\subsection{Bridging normalization, tidyness, and our definition}
+\subsection{Bridging normalization, tidyness, and data theory}
 \label{sub:bridge}
 
 First and foremost, both concepts, normalization and tidy data, are not in conflict.
@@ -1075,7 +1075,7 @@ contain a different value of $A$.  The second join results in relation $R[ADFG] 
 Unfortunately, it is not trivial to calculate all possible decomposition trees for a given
 dataset.  \textcolor{red}{Further formalization and study is under progress.}
 
-\subsection{Final thoughts}
+\subsection{Data semantics and interpretation}
 
 In the rest of the book, we focus on a statistical view of the data.  Besides the
 functional dependencies, we also consider the statistical dependencies of data.  For
