--- a/inductive.tex
+++ b/inductive.tex
@@ -76,7 +76,7 @@ learning in opposition to inductive learning --- are out of the scope of this co
 Maybe the most general (and useful) framework for predictive learning is Statistical
 Learning Theory.  In this chapter, we will introduce the basic concepts of this theory.
 
-\section{Hypothesis}
+\section{Hypothesis and setup}
 
 Consider the set
 \begin{equation}
