--- a/project.tex
+++ b/project.tex
@@ -109,9 +109,10 @@ The CRISP-DM methodology is a good starting point for data science projects.  Ho
 does not mean that should be followed strictly.  The process is cyclic and flexible, and
 adaptations are possible at any stage of the process.
 
-\section{Nina and Zumel's approach}
+\section{ZN approach}
 
-\textcite{Zumel2019} also propose a methodology for data science projects.  Besides
+\textcite{Zumel2019} also propose a methodology for data science projects --- which we
+call the ZN approach.  Besides
 describing each step in a data science project, they further address the roles of each
 individual involved in the project.  They state that data science projects are always
 collaborative, as they require domain expertise, data expertise, and software expertise.
@@ -121,7 +122,7 @@ only due to the business requirements, but also because the data changes over ti
 The authors state that agile methodologies are suitable (and necessary) for data science
 projects.
 
-\subsection{Roles}
+\subsection{Roles of the ZN approach}
 
 In their approach, five roles are defined.
 
@@ -153,7 +154,7 @@ that receives instructions to adapt the data storage and means to collect data.
 deploys final project results.  He is responsible to define requirements such as response
 time, programming language, and the infrastructure to run the software.
 
-\subsection{Process}
+\subsection{Processes of the ZN approach}
 
 \citeauthor{Zumel2019}'s model is similar to CRISP-DM, but emphasizes that back-and-forth
 is possible at any stage of the process.  \Cref{fig:zumel} shows a diagram of the process.
@@ -201,7 +202,7 @@ The phases are:
   can be back-and-forth.
 \end{figurebox}
 
-\section{Agile}
+\section{Agile methodology}
 
 Agile is a methodology for software development.  It is an alternative to the waterfall
 methodology.  The waterfall methodology is a sequential design where each phase
@@ -215,7 +216,7 @@ The four values of agile manifesto are:
   \item Responding to change over following a plan.
 \end{itemize}
 
-\section{SCRUM}
+\section{SCRUM framework}
 
 SCRUM is an agile framework for software development.  It is a process framework for
 managing complex projects.  It is a lightweight, which means that it
